...
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp" />

    <LinearLayout
        android:id="@+id/botonera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"

        >

        <Button
            android:id="@+id/btnLogOut"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/cerrar_sesion"
            android:textColor="@android:color/white"
...
