...
    <!--        android:layout_gravity="start"-->
    <!--        app:menu="@menu/user_options_menu"-->
    <!--        android:fitsSystemWindows="true"/>-->


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#000"
        android:theme="@style/AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/btProfile"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
...
