<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.uniovi.foxvid.vista.MainActivity">
    <item
        android:id="@+id/nav_post"
        android:contentDescription="@string/nav_bar_posts"
        android:icon="@drawable/baseline_home_black_18dp"
        android:title="@string/nav_bar_posts" />
    <item
        android:id="@+id/nav_statistics"
        android:icon="@drawable/ic_baseline_map_24"
        android:contentDescription="@string/nav_bar_stadistics"
        android:title="@string/nav_bar_stadistics" />
    <item
        android:id="@+id/nav_news"
        android:contentDescription="@string/nav_bar_news"
        android:icon="@drawable/baseline_art_track_black_18dp"
        android:title="@string/nav_bar_news" />
</menu>