...
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
...
    <string name="settings_dialog_message">Here comes a message</string>
    <string name="settings_summary">Current value is $1</string>
    <string name="settings_unit">Km</string>
    <string name="settings_title">Here comes the title</string>
    <string name="nav_bar_posts">Publicaciones</string>
    <string name="nav_bar_stadistics">Actividad</string>
    <string name="nav_bar_news">Noticias</string>
    <string name="location_permission_not_given_message">Se requiere permisos de localización</string>
    <string name="imagen_noticia">Imagen de la noticia</string>
    <string name="new_title">Titulo noticia</string>
    <string name="new_summary">Resumen de la noticia</string>

    <!-- Autenticacion de facebook -->
...
